--- a/website/index.html
+++ b/website/index.html
@@ -6,183 +6,116 @@
     <p></p>
   </div>
   <div id="content" style="display: none;">
-    <div class="ui compact huge segment" id="currencySelectorObj">
+    <div class="ui compact huge segment" id="currencySelectorObj" style="right: 20px;">
       <label style="margin-right: 11px;">$</label>
       <div class="ui slider checkbox">
         <input type="checkbox" id="currencyCheckbox">
         <label>£</label>
       </div>
     </div>
-    <div class="ui large statistics" id="firstRow">
-      <div class="statistic dollarComponent">
-        <div class="value jj-pink" id="raisedTotalDollars"> $ 0 </div>
-        <div class="label">Raised For <span class="jj-year"></span></div>
-      </div>
-      <div class="statistic poundComponent">
-        <div class="value jj-pink" id="raisedTotalPounds"> £ 0 </div>
-        <div class="label">Raised For <span class="jj-year"></span></div>
-      </div>
-    </div>
-    <div class="ui small statistics custom-grid">
-      <div class="statistic custom-grid-column-4">
-        <div class="value jj-pink" id="bundlesSold"> 0 </div>
-        <div class="label">Collections Distributed</div>
-      </div>
-      <div class="statistic custom-grid-column-4">
-        <div class="value jj-pink" id="donationCount"> 0 </div>
-        <div class="label">Donations</div>
-      </div>
-      <div class="statistic dollarComponent custom-grid-column-4">
-        <div class="value jj-pink" id="averageDonationDollars"> $ 0.00 </div>
-        <div class="label">Average Donation</div>
-      </div>
-      <div class="statistic poundComponent custom-grid-column-4">
-        <div class="value jj-pink" id="averageDonationPounds"> £ 0.00 </div>
-        <div class="label">Average Donation</div>
-      </div>
-      <div class="statistic dollarComponent custom-grid-column-4">
-        <div class="value jj-pink" id="raisedEntireDollars"> $ 0 </div>
-        <div class="label">Raised Since <span class="jj-start-year"></span></div>
-      </div>
-      <div class="statistic poundComponent custom-grid-column-4">
-        <div class="value jj-pink" id="raisedEntirePounds"> £ 0 </div>
-        <div class="label">Raised Since <span class="jj-start-year"></span></div>
-      </div>
-    </div>
-    <div class="center-row">
-      <div class="diving-row">
-        <div id="liveUpdatingRow">
-          <label class="subtext-label" id="updatingRealTime">
-            <div class="ui active slow loader mini"></div>
-            <div class="loading-circle">
-              <i class="live-icon icon circle"></i>
-            </div> Updating Live
-          </label>
-          <label class="subtext-label" id="labelDate" style="float: right;"> Last Updated: N/A </label>
-        </div>
-        <hr size="1" class="divider">
-      </div>
-    </div>
-    <div class="section">
-      <h1 style="text-align: center; margin-bottom: 2px;">Charities</h1>
-      <p style="text-align: center; margin-bottom: 35px;">
-        The <span class="jj-year"></span> Jingle Jam is raising funds for <span class="jj-cause-count"></span> important causes, 
-        ranging from physcial and mental health, diversity and inclusion, equality of opportunity, and protecting the planet.
-      </p>
-      <div style="width: 100%; display: flex; justify-content: center; align-items: center;">
-        <div class="ui horizontal raised doubling cards" id="charityCards" style="max-width: 1050px; margin-bottom: 20px;">
-        </div>
-      </div>
-    </div>
-    <div class="center-row">
-      <div class="diving-row">
-        <hr size="1" class="divider">
-      </div>
-    </div>
-    <div class="section-center">
-      <div class="stat-row">
-        <canvas id="comparisonChart"></canvas>
-      </div>
-    </div>
-    <div class="section-center bottom-margin">
-      <div class="ui labeled ticked range slider bottom aligned" id="dateRange"></div>
-    </div>
-    <div class="center-row">
-      <div class="diving-row">
-        <hr size="1" class="divider">
-      </div>
-    </div>
-    <div id="historySection">
-      <div class="history-section">
-        <div class="section">
-          <h1>Over The Years</h1>
-          <p>
-            The Jingle Jam began back in <span class="jj-start-year"></span> when Lewis and Simon of The Yogscast asked fans to donate to Oxfam instead
-            of sending them presents. It has
-            since grown to a yearly event where a community of volunteers, content creators, games companies, and gamers
-            from around the world
-            raise money for various causes, including those focused on sustainability, conservation, war relief,
-            accessibility in gaming and sport, cancer research, LGBTQ+ issues, combating racism, and much more.
-          </p>
-        </div>
-        <div class="section">
-          <div class="stats-section">
-            <div class="ui statistics">
-              <div class="statistic">
-                <div class="value jj-pink" id="totalRaised"><i class="pound sign icon"></i> 22 million </div>
-                <div class="label">Raised To Date</div>
-              </div>
+    <div class="guttered">
+      <div class="guttered-section" style="margin-top: 45px;">
+        <div class="flexable">
+          <div class="ui segment jj-pink-border-top large centered stat full-width" style="height: 180px;">
+            <div class="header">
+              <h2>Raised For 2023</h2>
             </div>
-            <div class="stats-section-text stats-section-text-right">
-              , over <strong>£22 million</strong>
-              has been contributed over the course of the Jingle Jam's existence.
+            <div class="body" style="margin-top: 0px;">
+              <div class="value jj-pink dollar-component" id="raisedTotalDollars"> $ 0 </div>
+              <div class="value jj-pink pound-component" id="raisedTotalPounds"> £ 0 </div>
+            </div>
+            <div id="liveUpdatingRow">
+              <label class="subtext-label left" id="updatingRealTime">
+                <div class="ui active slow loader mini"></div>
+                <div class="loading-circle">
+                  <i class="live-icon icon circle"></i>
+                </div> Updating Live
+              </label>
+              <label class="subtext-label right" id="labelDate" style="float: right;"> Last Updated: N/A </label>
             </div>
           </div>
-        </div>
-        <div class="section">
-          <div class="stats-section">
-            <div class="stats-section-text stats-section-text-left">
-              The Jingle Jam is supported by everyday people, like you, looking to support a wide range of causes and to
-              make an impact on the world. Since we began in <span class="jj-start-year"></span>,
-              gamers and viewers have sent over <strong>795 thousand</strong> individual donations.
+          <div class="flexable" style="flex: 0%; align-self: start;" id="leftGrid">
+            <div class="ui segment jj-pink-border-top large centered stat">
+              <div class="header">
+                <h3>Collections Distributed</h3>
+              </div>
+              <div class="body">
+                <div class="value small jj-pink" id="bundlesSold"> 0 </div>
+              </div>
             </div>
-            <div class="ui statistics">
-              <div class="statistic">
-                <div class="value jj-pink" id="totalDonations"><i class="user icon"></i> 795,000 </div>
-                <div class="label">Individual Donations</div>
+            <div class="ui segment jj-pink-border-top large centered stat">
+              <div class="header">
+                <h3>Donations</h3>
+              </div>
+              <div class="body">
+                <div class="value small jj-pink" id="donationCount"> 0 </div>
+              </div>
+            </div>
+            <div class="ui segment jj-pink-border-top large centered stat">
+              <div class="header">
+                <h3>Average Donation</h3>
+              </div>
+              <div class="body">
+                <div class="value small jj-pink dollar-component" id="averageDonationDollars"> $ 0 </div>
+                <div class="value small jj-pink pound-component" id="averageDonationPounds"> £ 0 </div>
+              </div>
+            </div>
+            <div class="ui segment jj-pink-border-top large centered stat">
+              <div class="header">
+                <h3>Raised Since <span class="jj-start-year"></span></h3>
+              </div>
+              <div class="body">
+                <div class="value small jj-pink dollar-component" id="raisedEntireDollars"> $ 0 </div>
+                <div class="value small jj-pink pound-component" id="raisedEntirePounds"> £ 0 </div>
+              </div>
+            </div>
+            <div class="ui segment jj-pink-border-top fit-content large centered">
+              <div class="header">
+                <h3>Previous Years</h3>
+              </div>
+              <div class="body">
+                <table class="ui large celled striped table unstackable" id="yearsTable">
+                  <thead>
+                    <tr>
+                      <th class="center aligned" style="min-width: 60px; border-left: 1px solid rgba(34,36,38,.1);">Year
+                      </th>
+                      <th class="center aligned" style="min-width: 60px;">Final Total</th>
+                    </tr>
+                  <tbody></tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+          <div class="flexable" style="flex: 50%; align-self: start;" id="rightGrid">
+            <div class="ui segment jj-pink-border-top fit-content centered full-width">
+              <div class="header">
+                <h2>Charities</h2>
+              </div>
+              <div class="body">
+                <p style="text-align: center; margin-bottom: 20px;">
+                  The <span class="jj-year"></span> Jingle Jam is raising money for <span class="jj-cause-count"></span>
+                  important
+                  causes,
+                  ranging from physcial and mental health, diversity and inclusion, equality of opportunity, and
+                  protecting the
+                  planet.
+                </p>
+                <div class="ui horizontal raised doubling cards" id="charityCards">
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="section">
-          <div class="stats-section">
-            <div class="ui large statistics">
-              <div class="statistic">
-                <div class="value jj-pink" id="totalDonations"><i class="handshake icon"></i> 37 </div>
-                <div class="label">Causes Supported</div>
-              </div>
-            </div>
-            <div class="stats-section-text stats-section-text-right">
-              We seek to represent a wide range of causes, including improving physical and mental health, supporting
-              diversity and inclusion,
-              enhancing equality of opportunity, protecting the planet, contributing to disaster and emergency aid, and
-              much more. Our mission has lead to
-              <strong>37 causes</strong> from across the world being supported by the Jingle Jam.
-            </div>
+        <div class="ui segment jj-pink-border-top fit-content large centered" style="margin-top: 25px !important; margin-bottom: 20px !important;">
+          <div class="header">
+            <h3>Amount Raised Over Time</h3>
           </div>
-        </div>
-        <div class="section">
-          <div class="stats-section">
-            <div class="stats-section-text stats-section-text-left">
-              Being the World's Biggest Charity Gaming Event, we incentivise donations by live streaming gaming content
-              throughout the first half of December.
-              Viewers from around the world tune in live, resulting in over <strong>100 million</strong> live views
-              since the Jingle Jam's inception,
-              with over <strong>30 million</strong> video views.
-            </div>
-            <div class="ui statistics">
-              <div class="statistic">
-                <div class="value jj-pink" id="totalGamesInCollections"><i class="users icon"></i> 130 million </div>
-                <div class="label">Views Since 2011</div>
+          <div class="body" style="height: auto;">
+              <div class="stat-row">
+                <canvas id="comparisonChart"></canvas>
               </div>
-            </div>
+              <div class="ui labeled ticked range slider bottom aligned" id="dateRange"></div>
           </div>
-        </div>
-        <div class="section" style="margin-top: 180px;">
-          <p>
-            Since
-          </p>
-        </div>
-        <div class="section years-section">
-          <table class="ui large celled striped table unstackable" id="yearsTable" style="max-width: 500px;">
-            <thead>
-              <tr>
-                <th class="center aligned" style="min-width: 60px; border-left: 1px solid rgba(34,36,38,.1);">Year</th>
-                <th class="center aligned" style="min-width: 60px;">Donations</th>
-                <th class="center aligned" style="min-width: 60px;">Final Total</th>
-              </tr>
-            <tbody></tbody>
-          </table>
         </div>
       </div>
     </div>
