--- a/website/index.html
+++ b/website/index.html
@@ -18,11 +18,10 @@
         <div class="flexable">
           <div class="ui segment jj-pink-border-top large centered stat full-width" style="height: 180px;">
             <div class="header">
-              <h2>Raised For 2023</h2>
+              <h2>Raised For <span class="jj-year"></span></h2>
             </div>
             <div class="body" style="margin-top: 0px;">
-              <div class="value jj-pink dollar-component" id="raisedTotalDollars"> $ 0 </div>
-              <div class="value jj-pink pound-component" id="raisedTotalPounds"> £ 0 </div>
+              <div class="value jj-pink" id="raisedTotal"> £ 0 </div>
             </div>
             <div id="liveUpdatingRow">
               <label class="subtext-label left" id="updatingRealTime">
@@ -56,8 +55,7 @@
                 <h3>Average Donation</h3>
               </div>
               <div class="body">
-                <div class="value small jj-pink dollar-component" id="averageDonationDollars"> $ 0 </div>
-                <div class="value small jj-pink pound-component" id="averageDonationPounds"> £ 0 </div>
+                <div class="value small jj-pink" id="averageDonation"> £ 0 </div>
               </div>
             </div>
             <div class="ui segment jj-pink-border-top large centered stat">
@@ -65,8 +63,7 @@
                 <h3>Raised Since <span class="jj-start-year"></span></h3>
               </div>
               <div class="body">
-                <div class="value small jj-pink dollar-component" id="raisedEntireDollars"> $ 0 </div>
-                <div class="value small jj-pink pound-component" id="raisedEntirePounds"> £ 0 </div>
+                <div class="value small jj-pink" id="raisedEntire"> £ 0 </div>
               </div>
             </div>
             <div class="ui segment jj-pink-border-top fit-content large centered">
