--- a/website/index.html
+++ b/website/index.html
@@ -76,7 +76,7 @@
                     <tr>
                       <th class="center aligned" style="min-width: 60px; border-left: 1px solid rgba(34,36,38,.1);">Year
                       </th>
-                      <th class="center aligned" style="min-width: 60px;">Final Total</th>
+                      <th class="center aligned" style="min-width: 60px;">Raised</th>
                     </tr>
                   <tbody></tbody>
                 </table>
@@ -89,13 +89,11 @@
                 <h2>Charities</h2>
               </div>
               <div class="body">
-                <p style="text-align: center; margin-bottom: 20px;">
-                  The <span class="jj-year"></span> Jingle Jam is raising money for <span class="jj-cause-count"></span>
-                  important
-                  causes,
+                <p style="text-align: center; margin-top: 5px; margin-bottom: 25px;">
+                  The <span class="jj-year"></span> Jingle Jam is raising money to support <span
+                    class="jj-cause-count"></span> important causes,
                   ranging from physcial and mental health, diversity and inclusion, equality of opportunity, and
-                  protecting the
-                  planet.
+                  protecting the planet. Below are this years charities and how your donations will help their causes.
                 </p>
                 <div class="ui horizontal raised doubling cards" id="charityCards">
                 </div>
@@ -103,15 +101,16 @@
             </div>
           </div>
         </div>
-        <div class="ui segment jj-pink-border-top fit-content large centered" style="margin-top: 25px !important; margin-bottom: 20px !important;">
+        <div class="ui segment jj-pink-border-top fit-content large centered"
+          style="margin-top: 35px !important; margin-bottom: 20px !important;">
           <div class="header">
             <h3>Amount Raised Over Time</h3>
           </div>
           <div class="body" style="height: auto;">
-              <div class="stat-row">
-                <canvas id="comparisonChart"></canvas>
-              </div>
-              <div class="ui labeled ticked range slider bottom aligned" id="dateRange"></div>
+            <div class="stat-row">
+              <canvas id="comparisonChart"></canvas>
+            </div>
+            <div class="ui labeled ticked range slider bottom aligned" id="dateRange"></div>
           </div>
         </div>
       </div>
