--- a/website/index.html
+++ b/website/index.html
@@ -18,10 +18,10 @@
         <div class="flexable">
           <div class="ui segment jj-pink-border-top large centered stat full-width" style="height: 180px;">
             <div class="header">
-              <h2>Raised For <span class="jj-year"></span></h2>
+              <h2 id="mainCounterHeader">Raised In <span class="jj-year"></span></h2>
             </div>
             <div class="body" style="margin-top: 0px;">
-              <div class="value jj-pink" id="raisedTotal"> £ 0 </div>
+              <div class="value jj-pink" id="mainCounter"> £ 0 </div>
             </div>
             <div id="liveUpdatingRow">
               <label class="subtext-label left" id="updatingRealTime">
@@ -93,7 +93,7 @@
                   The <span class="jj-year"></span> Jingle Jam is raising money to support <span
                     class="jj-cause-count"></span> important causes,
                   ranging from physcial and mental health, diversity and inclusion, equality of opportunity, and
-                  protecting the planet. Below are this years charities and how your donations will help their causes.
+                  protecting the planet. Here's how your donations will make an impact.
                 </p>
                 <div class="ui horizontal raised doubling cards" id="charityCards">
                 </div>
