--- a/website/index.html
+++ b/website/index.html
@@ -1,4 +1,4 @@
-<div id="embedContainer">
+<div id="embedContainer" data-status="live">
   <div class="ui segment" id="loader">
     <div class="ui active inverted dimmer" style="background-color: #1b1c1d00">
       <div class="ui massive text loader">Loading</div>
