--- a/website/index.html
+++ b/website/index.html
@@ -97,7 +97,7 @@
                 <p style="text-align: center; margin-top: 5px; margin-bottom: 25px;">
                   The <span class="jj-year"></span> Jingle Jam is raising money to support <span
                     class="jj-cause-count"></span> important causes,
-                  ranging from physcial and mental health, diversity and inclusion, equality of opportunity, and
+                  ranging from physical and mental health, diversity and inclusion, equality of opportunity, and
                   protecting the planet. Here's how your donations will make an impact.
                 </p>
                 <div class="ui horizontal raised doubling cards" id="charityCards">
