--- a/website/index.html
+++ b/website/index.html
@@ -89,16 +89,15 @@
             </div>
           </div>
           <div class="flexable" style="flex: 50%; align-self: start;" id="rightGrid">
-            <div class="ui segment jj-pink-border-top fit-content centered full-width">
+            <div class="ui segment jj-pink-border-top fit-content centered full-width" style="min-height: 1305px;">
               <div class="header">
                 <h2>Charities</h2>
               </div>
               <div class="body">
                 <p style="text-align: center; margin-top: 5px; margin-bottom: 25px;">
-                  The <span class="jj-year"></span> Jingle Jam is raising money to support <span
-                    class="jj-cause-count"></span> important causes,
-                  ranging from physical and mental health, diversity and inclusion, equality of opportunity, and
-                  protecting the planet. Here's how your donations will make an impact.
+                  The <span class="jj-year"></span> Jingle Jam is raising money to support <span class="jj-cause-count"></span> important causes,
+                  ranging from physical and mental health, diversity and inclusion, global crisis relief, and safeguarding the 
+                  planet. Here's how your donations will make a difference.
                 </p>
                 <div class="ui horizontal raised doubling cards" id="charityCards">
                 </div>
