Improve Font Size

--- a/website/index.html
+++ b/website/index.html
@@ -22,7 +22,7 @@
     <div class="guttered">
       <div class="guttered-section" style="margin-top: 43px;">
         <div class="flexable">
-          <div class="ui segment jj-pink-border-top large centered stat full-width" style="height: 180px;">
+          <div class="ui segment jj-pink-border-top large centered stat full-width main">
             <div class="header-text">
               <h2 id="mainCounterHeader"></h2>
             </div>
@@ -32,7 +32,7 @@
                   <div class="change-counter-text" id="mainCounterChange"></div>
                 </div>
               </div>
-              <div class="value jj-pink" id="mainCounter"> </div>
+              <div class="value jj-pink large" id="mainCounter"> </div>
             </div>
             <div id="liveUpdatingRow" class="hide-live-update">
               <label class="subtext-label left" id="updatingRealTime">
@@ -102,7 +102,7 @@
                 <h2>Charities</h2>
               </div>
               <div class="body">
-                <p style="text-align: center; margin-top: 5px; margin-bottom: 25px;">
+                <p style="text-align: center; margin-top: 14px; margin-bottom: 30px;">
                   The <span class="jj-year"></span> Jingle Jam is raising money to support <span
                     class="jj-cause-count"></span> important causes,
                   ranging from physical and mental health, diversity and inclusion, global crisis relief, and
