Hide "Raised since 2011"

--- a/website/index.html
+++ b/website/index.html
@@ -69,7 +69,7 @@
                 <div class="value small jj-pink" id="averageDonation"> £ 0 </div>
               </div>
             </div>
-            <div class="ui segment jj-pink-border-top large centered stat">
+            <div class="ui segment jj-pink-border-top large centered stat" style="display: none !important;">
               <div class="header-text">
                 <h3>Raised Since <span class="jj-start-year"></span></h3>
               </div>
