New Total Example Page

--- a/website/indexTotal.html
+++ b/website/indexTotal.html
@@ -1,2 +1,4 @@
 
-<div class="value jj-pink" id="mainCounter"> </div>
+<div id="mainCounter"> </div>
+<div id="bundlesSold"> </div>
+<div id="averageDonation"> </div>
