Update README for 2025, add migration script for historical data, and adjust API cache settings

--- a/website/index.html
+++ b/website/index.html
@@ -93,7 +93,7 @@
         </div>
         <div class="ui segment chart-card"
           style="margin-top: 20px !important; margin-bottom: 20px !important;">
-          <div class="card-header-text"><i class="chart line icon"></i>Amount Raised Over Time</div>
+          <div class="charities-header-text" style="margin-top: 5px !important;"><i class="area chart icon"></i>Raised By Year</div>
           <div class="chart-body">
             <div class="stat-row">
               <canvas id="comparisonChart"></canvas>
