Minor Style Improvements

--- a/website/index.html
+++ b/website/index.html
@@ -42,11 +42,11 @@
             </div>
           </div>
           <div class="top-stat-cards">
-            <div class="ui segment stat-card" style="min-width: 260px !important;">
-              <div class="stat-header"><i class="gift icon"></i>Collections Distributed</div>
+            <div class="ui segment stat-card" style="min-width: 280px !important;">
+              <div class="stat-header"><i class="gift icon"></i>Collections</div>
               <div class="stat-value" id="bundlesSold"> 0 </div>
             </div>
-            <div class="ui segment stat-card" style="min-width: 240px !important;">
+            <div class="ui segment stat-card" style="min-width: 280px !important;">
               <div class="stat-header"><i class="heart icon"></i>Donations</div>
               <div class="stat-value" id="donationCount"> 0 </div>
             </div>
